--- a/dashboard/templates/plots.html
+++ b/dashboard/templates/plots.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <title>UT Energy Dashboard</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-  <link rel="stylesheet" href="assets/css/style.css">
-  <link rel="stylesheet" href="assets/css/d3Style.css">
+  <link rel="stylesheet" href="static/css/style.css">
+  <link rel="stylesheet" href="static/css/d3Style.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.9.1/d3-tip.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.min.js"></script>
 
@@ -20,8 +20,15 @@
       </div>
     </div>
     <div class="row">
-      <div id="map">
-
+      <div class="col-xs-6  col-md-9">
+        <div id="scatter_temp">
+          <!-- Append our chart here. -->
+        </div>
+      </div>
+      <div class="col-xs-6  col-md-9">
+        <div id="scatter_time">
+          <!-- Append our chart here. -->
+        </div>
       </div>
     </div>
   </div>
@@ -34,12 +41,9 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   <script src="https://d3js.org/d3.v5.min.js"></script>
-  <!-- Leaflet JavaScript -->
-  <script src="https://unpkg.com/leaflet@1.0.0-rc.3/dist/leaflet.js"></script>
-  <!-- API Key -->
-  <script type="text/javascript" src="../assets/js/config.js"></script>
-
-  <script type="text/javascript" src="../assets/js/logic.js"></script>
+  <script type="text/javascript" src="static/js/plots.js"></script>
+  <script src="{{ url_for('static', filename='js/plots.js')}}"></script>
+  <script type="text/javascript">plots({{ acronym }})</script>
 
 </body>
 
